2004-07-21 Mikhail Khodjaiants
	CThread cleanup.
	* CThread.java

2004-07-21 Mikhail Khodjaiants
	Copied the target factory methods from CDebugModel to CDIDebugModel.
	Marked the old methods as deprecated.
	* CDebugModel.java
	* CDIDebugModel.java

2004-07-21 Mikhail Khodjaiants
	CDebugTarget and CThread cleanup.
	* CoreModelMessages.properties
	* CDebugTarget.java
	* CThread.java

2004-07-21 Mikhail Khodjaiants
	Removed state validation from CDebugElement.
	* CDebugTarget.java
	* CDebugElement.java

2004-07-20 Mikhail Khodjaiants
	Added new state - "STEPPED".
	* CDebugElementState.java

2004-07-20 Mikhail Khodjaiants
	Cleanup.
	* ICDebugInternalConstants.java

2004-07-20 Mikhail Khodjaiants
	Cleanup.
	* CStackFrame.java

2004-07-16 Mikhail Khodjaiants
	Asynchronous resume, suspend and step operations. Cleanup.
	* CDebugModel.java
	* CDebugElementState.java
	* ICDebugElement.java
	* ICDebugTarget.java
	* ICThread.java: new
	* ICDebugTargetType: removed
	* IState: removed
	* CCoreFileDebugTarget.java
	* CDebugElement.java
	* CDebugTarget.java
	* CStackFrame.java
	* CThread.java
	* CModificationVariable.java

2004-07-15 Alain Magloire

	org.eclipse.cdt.debug.core.cdi.model.type should
	be in the cdi source folder.

2004-07-09 Mikhail Khodjaiants
	Cleanup. Added support of "CDebugElementState".
	* ICDebugElement.java
	* CDebugElement.java

2004-07-09 Mikhail Khodjaiants
	Renamed "ICDebugElementErrorStatus" to "ICDebugElementStatus".
	Added comments to ICDebugElementStatus.java.
	* ICDebugElementStatus.java
	* CDebugElement.java
	* CDebugTarget.java
	* CThread.java
	* CValue.java
	* CVariable.java
 
2004-07-02 Alain Magloire

	Move the CDI interface to its own source browser and library
	* cdi/*

2004-06-29 Alain Magloire

	Do not use the cache stackframe.
	* src/org/eclipse/cdt/debug/internal/core/model/CThread.java

2004-06-29 Mikhail Khodjaiants
	Temporary fix for bug 68915: Invalid values in the Variables view.
	* CStackFrame.java
	* CThread.java
